--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "webpack --mode=development --watch"
+    "webpack": "NODE_OPTIONS=--openssl-legacy-provider webpack --mode=development --watch"
   },
   "repository": {
     "type": "git",
